--- a/.github/workflows/reusable-pull-request-actions.yml
+++ b/.github/workflows/reusable-pull-request-actions.yml
@@ -28,6 +28,7 @@ jobs:
 
   project-pull-requests:
     runs-on: ubuntu:latest
+    secrets: inherit
     steps:
       name: Pull request closed
       if: ${{ github.event.action == "closed" }}
