--- a/.github/workflows/reusable-issue-actions.yml
+++ b/.github/workflows/reusable-issue-actions.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   project-automation-calls:
     runs-on: ubuntu-latest
+    secrets: inherit
     steps:
       name: Issue closed
       if: ${{ github.event.action == "closed" }}
