--- a/.github/workflows/reusable-pull-request-actions.yml
+++ b/.github/workflows/reusable-pull-request-actions.yml
@@ -10,7 +10,7 @@ jobs:
   close-issues:
     name: Close issues
     if: github.event.pull_request.merged && ${{ github.event.branches == "feature/*" }}
-    uses: Janmtbehrens/OpenSlides/dev/workflows/close-issues@reusable-github-actions
+    uses: Janmtbehrens/OpenSlides/.github/workflows/close-issues@reusable-github-actions
     secrets: inherit
     with:
       branches: "feature/*"
@@ -21,7 +21,7 @@ jobs:
       github.event.pull_request.merged == true &&
       contains(github.event.pull_request.labels.*.name, 'staging') &&
       ${{ github.event.branches == "main" }}
-    uses: Janmtbehrens/OpenSlides/dev/workflows/pick-to-staging-service@reusable-github-actions
+    uses: Janmtbehrens/OpenSlides/.github/workflows/pick-to-staging-service@reusable-github-actions
     secrets: inherit
     with:
       branches: "main"
