--- a/.github/workflows/reusable-pull-request-actions.yml
+++ b/.github/workflows/reusable-pull-request-actions.yml
@@ -10,7 +10,7 @@ jobs:
   close-issues:
     name: Close issues
     if: github.event.pull_request.merged && ${{ github.event.branches == "feature/*" }}
-    uses: Janmtbehrens/OpenSlides/.github/workflows/close-issues@reusable-github-actions
+    uses: Janmtbehrens/OpenSlides/.github/workflows/close-issues.yml@reusable-github-actions
     secrets: inherit
     with:
       branches: "feature/*"
@@ -21,7 +21,7 @@ jobs:
       github.event.pull_request.merged == true &&
       contains(github.event.pull_request.labels.*.name, 'staging') &&
       ${{ github.event.branches == "main" }}
-    uses: Janmtbehrens/OpenSlides/.github/workflows/pick-to-staging-service@reusable-github-actions
+    uses: Janmtbehrens/OpenSlides/.github/workflows/pick-to-staging-service.yml@reusable-github-actions
     secrets: inherit
     with:
       branches: "main"
@@ -30,33 +30,33 @@ jobs:
     runs-on: ubuntu:latest
     secrets: inherit
     steps:
-      name: Pull request closed new
-      if: ${{ github.event.action == "closed" }}
-      uses: Janmtbehrens/OpenSlides/dev/actions/project-automation@reusable-github-actions
-      with:
-        resource_node_id: ${{ github.event.pull_request.node_id }}
-        status_value: "Done"
-        gh_app_ID: ${{ secrets.AUTOMATION_APP_ID }}
-        gh_app_installation_ID: ${{ secrets.AUTOMATION_APP_INSTALLATION_ID }}
-        gh_app_secret_key: ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
+      - name: Pull request closed new
+        if: ${{ github.event.action == "closed" }}
+        uses: Janmtbehrens/OpenSlides/dev/actions/project-automation@reusable-github-actions
+        with:
+          resource_node_id: ${{ github.event.pull_request.node_id }}
+          status_value: "Done"
+          gh_app_ID: ${{ secrets.AUTOMATION_APP_ID }}
+          gh_app_installation_ID: ${{ secrets.AUTOMATION_APP_INSTALLATION_ID }}
+          gh_app_secret_key: ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
       
-      name: Pull request opened new
-      if: ${{ github.event.action == "opened" || github.event.action == "reopened" }}
-      uses: Janmtbehrens/OpenSlides/dev/actions/project-automation@reusable-github-actions
-      with:
-        resource_node_id: ${{ github.event.pull_request.node_id }}
-        status_value: "Backlog"
-        gh_app_ID: ${{ secrets.AUTOMATION_APP_ID }}
-        gh_app_installation_ID: ${{ secrets.AUTOMATION_APP_INSTALLATION_ID }}
-        gh_app_secret_key: ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
+      - name: Pull request opened new
+        if: ${{ github.event.action == "opened" || github.event.action == "reopened" }}
+        uses: Janmtbehrens/OpenSlides/dev/actions/project-automation@reusable-github-actions
+        with:
+          resource_node_id: ${{ github.event.pull_request.node_id }}
+          status_value: "Backlog"
+          gh_app_ID: ${{ secrets.AUTOMATION_APP_ID }}
+          gh_app_installation_ID: ${{ secrets.AUTOMATION_APP_INSTALLATION_ID }}
+          gh_app_secret_key: ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
       
-      name: Pull request review requested new
-      if: ${{ github.event.action == "review_requested" }}
-      uses: Janmtbehrens/OpenSlides/dev/actions/project-automation@reusable-github-actions
-      with:
-        resource_node_id: ${{ github.event.pull_request.node_id }}
-        status_value: "Review in progress"
-        gh_app_ID: ${{ secrets.AUTOMATION_APP_ID }}
-        gh_app_installation_ID: ${{ secrets.AUTOMATION_APP_INSTALLATION_ID }}
-        gh_app_secret_key: ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
+      - name: Pull request review requested new
+        if: ${{ github.event.action == "review_requested" }}
+        uses: Janmtbehrens/OpenSlides/dev/actions/project-automation@reusable-github-actions
+        with:
+          resource_node_id: ${{ github.event.pull_request.node_id }}
+          status_value: "Review in progress"
+          gh_app_ID: ${{ secrets.AUTOMATION_APP_ID }}
+          gh_app_installation_ID: ${{ secrets.AUTOMATION_APP_INSTALLATION_ID }}
+          gh_app_secret_key: ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
 
