Testing Branch Condition

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -15,6 +15,23 @@ jobs:
           echo ${{ secrets.AUTOMATION_APP_INSTALLATION_ID }}
           echo ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
   
+  branch-test:
+    # https://stackoverflow.com/questions/58033366/how-to-get-the-current-branch-within-github-actions
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
+
+      - name: Test branch
+        if: startsWith('${{ steps.extract_branch.outputs.branch}}', '${{ inputs.branches }}')
+        run: echo "Branch worked"
+
+      - name: Checks
+        run: |
+          echo "${{ steps.extract_branch.outputs.branch}}"
+          echo "${{ inputs.branches }}"
+          
+
   continuous-tests:
     name: Continuous Tests
     runs-on: ubuntu-latest
