--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,6 +16,9 @@ jobs:
           echo ${{ secrets.AUTOMATION_APP_PRIVATE_KEY }}
   
   branch-test:
+    runs-on: ubuntu:latest
+    name: Tests
+    steps:
     # https://stackoverflow.com/questions/58033366/how-to-get-the-current-branch-within-github-actions
       - name: Extract branch name
         shell: bash
