Using branch regex

--- a/.github/workflows/reusable-pull-request-actions.yml
+++ b/.github/workflows/reusable-pull-request-actions.yml
@@ -13,7 +13,7 @@ jobs:
     uses: Janmtbehrens/OpenSlides/.github/workflows/close-issues.yml@reusable-github-actions
     secrets: inherit
     with:
-      branches: "feature/*"
+      branches: "feature/.*"
   
   create-pr-for-staging:
     name: Close issues
