--- a/.github/workflows/reused-issues-workflow.yml
+++ b/.github/workflows/reused-issues-workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   project-automation-calls:
-    uses: Janmtbehrens/OpenSlides/.github/workflows/reusable-issue-workflow@reusable-github-actions
+    uses: Janmtbehrens/OpenSlides/.github/workflows/reusable-issue-workflow.yml@reusable-github-actions
     with:
       action_type: ${{ github.event.action }}
     runs-on: ubuntu-latest
